Fix layout issues for AboutContent

--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -12,33 +12,60 @@
   }
 }
 .message-wrapper {
+  overflow: hidden;
   gap: .5rem;
   text-align: center;
-  transform: translateY(-50%);
+  transform: translateY(-10%);
+  @include mixin.flexbox(center, center, column);
+
+  & .profile-pic {
+    overflow: hidden;
+    width: 100%;
+    height: 150px;
+  }
 
   @media screen and (min-width: 850px) {
     width: 100%;
-    gap: 0;
+    column-gap: 1rem;
     transform: translateY(0);
     text-align: start;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr auto 1fr 1fr 1fr;
     align-items: start;
     justify-items: start;
 
     & .about-title {
       grid-column: 1 / 2
     }
-    
-    & .first-block {
+
+    & .profile-pic-wrapper {
+      width: 100%;
+      height: 100%;
+      border: 2px solid rgba($color: white, $alpha: .3);
       grid-column: 1 / 2;
+      grid-row: 2 / 6;
+
+      & .profile-pic {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    & .message-title {
+      grid-column: 2 / 3;
       grid-row: 2 / 3;
+    }
+
+    & .first-block {
+      grid-column: 2 / 3;
+      grid-row: 3 / 4;
     }
 
     & .second-block {
       grid-column: 2 / 3;
-      grid-row: 2 / 3;
+      grid-row: 4 / 5;
     }
   }
 }
